--- a/ubicacion/templates/ubicacion/facultadinstancia_detail.html
+++ b/ubicacion/templates/ubicacion/facultadinstancia_detail.html
@@ -108,6 +108,7 @@
             <div class="card-deck">
                 <div class="card">
                     <div class="card-body">
+                            <h5 class="card-title">Recursos por Categoria</h5>
                         <p class="card-text">
                             <canvas id="recursosChart" data-url="{% url 'ubicacion:recursos-facultad' facultad.pk %}"></canvas>
                         </p>
