--- a/ubicacion/templates/ubicacion/escuelainstancia_detail.html
+++ b/ubicacion/templates/ubicacion/escuelainstancia_detail.html
@@ -93,7 +93,9 @@
                     <div class="card-header" data-url="">Proyectos Finales</div>
                     <div class="card-body">
                         <h4 class="card-title"></h4>
-                        <div class="card-body"></div>
+                        <div class="card-body">
+                            <canvas id="proyectosChart" data-url="{% url 'ubicacion:escuela-trabajos' escuela.pk %}"></canvas>
+                        </div>
                     </div>
                 </div>
             </div>
